--- a/Okeda2-master/res/layout-normal/user_perfil.xml
+++ b/Okeda2-master/res/layout-normal/user_perfil.xml
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Username"
+                android:text="username"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textSize="26dp" />
         </LinearLayout>
