--- a/Okeda2-master/res/layout-xlarge/activity_mostrar_vivienda.xml
+++ b/Okeda2-master/res/layout-xlarge/activity_mostrar_vivienda.xml
@@ -43,7 +43,7 @@
                     android:layout_weight="3"
                     android:contentDescription="2"
                     android:onClick="listener1"
-                    android:src="@drawable/abc_ab_bottom_solid_light_holo" />
+                    android:src="@drawable/ic_launcher" />
 
                 <ImageView
                     android:id="@+id/flechaDerecha1"
@@ -78,7 +78,7 @@
                     android:layout_weight="3"
                     android:contentDescription="4"
                     android:onClick="listener2"
-                    android:src="@drawable/abc_ab_bottom_solid_light_holo" />
+                    android:src="@drawable/ic_launcher" />
 
                 <ImageView
                     android:id="@+id/flechaDerecha2"
@@ -113,7 +113,7 @@
                     android:layout_weight="3"
                     android:contentDescription="5"
                     android:onClick="listener3"
-                    android:src="@drawable/abc_ab_bottom_solid_light_holo" />
+                    android:src="@drawable/ic_launcher" />
 
                 <ImageView
                     android:id="@+id/flechaDerecha3"
@@ -148,7 +148,7 @@
                     android:layout_weight="4"
                     android:contentDescription="6"
                     android:onClick="listener3"
-                    android:src="@drawable/abc_ab_bottom_solid_light_holo" />
+                    android:src="@drawable/ic_launcher" />
 
                 <ImageView
                     android:id="@+id/flechaDerecha4"
@@ -183,7 +183,7 @@
                     android:layout_weight="3"
                     android:contentDescription="7"
                     android:onClick="listener5"
-                    android:src="@drawable/abc_ab_bottom_solid_light_holo" />
+                    android:src="@drawable/ic_launcher" />
 
                 <ImageView
                     android:id="@+id/flechaDerecha5"
@@ -218,7 +218,7 @@
                     android:layout_weight="3"
                     android:contentDescription="7"
                     android:onClick="listener6"
-                    android:src="@drawable/abc_ab_bottom_solid_light_holo" />
+                    android:src="@drawable/ic_launcher" />
 
                 <ImageView
                     android:id="@+id/flechaDerecha6"
